# Aurivo-media-player-windows

./: .gitignore  CONTRIBUTING.md  LICENSE  LICENSE.tr  README.md  WINDOWS-BUILD.md  audioEngine.js  eqPresets.html  eqPresetsRenderer.js  imgui.ini  index.html  main.js  package-lock.json  package.json  preload.js  preload_backup.js  renderer.js  soundEffects.html  soundEffectsRenderer.js  test_colorknob.html  test_crossfeed.js  test_functions.js  test_native.js
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: build-linux.yml  build-windows.yml  release.yml
Aurivo-Dawlod/: NOTICE  aurivo-dawlod.json  aurivo_download_cli.py  main.js  package.json  yt_dlp_utils.py
Aurivo-Dawlod/assets/css/: extra.css  index.css
Aurivo-Dawlod/html/: about.html  compressor.html  history.html  index.html  playlist.html  playlist_new.html  preferences.html
Aurivo-Dawlod/src/: common.js  compressor.js  ffmpeg-manager.js  playlist.js  preferences.js  renderer.js
Aurivo-Dawlod/translations/: ar-SA.json  bn-BD.json  de-DE.json  el-GR.json  en.json  es-ES.json  fa-IR.json  fi-FI.json  fr-FR.json  hi-IN.json  hu-HU.json  i18n-init.js  i18n.js  it-IT.json  ja-JP.json  ne-NP.json  pl-PL.json  pt-BR.json  ru-RU.json  tr-TR.json  uk-UA.json  vi-VN.json  zh-CN.json  zh-TW.json
build-resources/: installer.nsh  license_ar.txt  license_en.txt  license_tr.txt
dli/analyzers/: analyzerbase.cpp  analyzerbase.h  analyzercontainer.cpp  analyzercontainer.h  baranalyzer.cpp  baranalyzer.h  blockanalyzer.cpp  blockanalyzer.h  boomanalyzer.cpp  boomanalyzer.h  engine_fwd.h  enginebase.cpp  enginebase.h  fht.cpp  fht.h  sonogram.cpp  sonogram.h  turbine.cpp  turbine.h
icons/: setup_final.iss
libs/bass_fx/c/: bass_fx.h
locales/: ar-SA.json  ar.json  bn-BD.json  de-DE.json  de.json  el-GR.json  en-US.json  en.json  es-ES.json  es.json  fa-IR.json  fi-FI.json  fr-FR.json  fr.json  hi-IN.json  hi.json  hu-HU.json  it-IT.json  ja-JP.json  ne-NP.json  pl-PL.json  pt-BR.json  ru-RU.json  tr-TR.json  tr.json  uk-UA.json  vi-VN.json  zh-CN.json  zh-TW.json
modules/: dawlodHost.js  i18n.js
modules/soundEffects/widgets/: barAnalyzer.js  colorKnob.js  eqResponse.js  rainbowSlider.js
native/: CMakeLists.txt  Untitled-1.ipynb  aurivo_audio.cpp  aurivo_dsp.cpp  binding.gyp  build_log.txt  copy-libs.js  package-lock.json  package.json  verify-libs.js
native-dist/: aurivo-projectm-visualizer  aurivo_audio.node
native-dist/obj.target/: aurivo_audio.node
packaging/appstream/: com.aurivo.mediaplayer.metainfo.xml  org.aurivo.metaplayer.appdata.xml
packaging/aur/: PKGBUILD
packaging/debian/: control
packaging/linux/: com.aurivo.mediaplayer.desktop
packaging/rpm/: aurivo-media-player.spec
resources/aurivo/: eq_presets.json
resources/autoeq/: 7Hz_Eternal.json  7Hz_Legato.json  7Hz_Timeless.json  7Hz_x_Crinacle_Zero_2.json  AKG_K1000.json  AKG_K167_Tiesto.json  AKG_K240DF.json  AKG_K240_MKII.json  AKG_K240_MKII_1.json  AKG_K240_MKII_2.json  AKG_K240_Monitor.json  AKG_K240_Sextett.json  AKG_K240_Sextett_1.json  AKG_K240_Sextett_Dekoni_Choice_Leather_DT_earpads.json  AKG_K240_Studio.json  AKG_K240_Studio_1.json  AKG_K250.json  AKG_K267.json  AKG_K267_Tiesto_club.json  AKG_K267_Tiesto_stage.json  AKG_K267_Tiesto_studio.json  AKG_K271_MKII.json  AKG_K271_MKII_1.json  AKG_K271_MKII_2.json  AKG_K272HD.json  AKG_K272HD_1.json  AKG_K280_Parabolic.json  AKG_K3003.json  AKG_K3003_bass_boost_filter.json  AKG_K3003_bass_boost_filter_1.json  AKG_K3003_high_boost_filter.json  AKG_K3003_high_boost_filter_1.json  AKG_K3003_reference_filter.json  AKG_K3003_reference_filter_1.json  AKG_K340.json  AKG_K361.json  AKG_K361_1.json  AKG_K361_2.json  AKG_K371.json  AKG_K371_1.json  (+1724 more)
scripts/: build-visualizer-win-mingw.sh  dev-platform.js  download-ffmpeg-windows.js  generate-nsis-bitmaps.ps1  generate-windows-ico.js  localize-about-keys.js  prepare-win-resources.js  run-aurivo.sh  verify-linux-artifacts.js  verify-win-artifacts.js
scripts/toolchains/: mingw64.cmake
styles/: eqPresets.css  main.css  soundEffects.css
visualizer/: CMakeLists.txt  README.md  config.inp  gl_loader.cpp  gl_loader.h  main_imgui.cpp
